<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="200dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/csmt"/>
        <Spinner
            android:id="@+id/SCSMT"
            android:layout_width="match_parent"
            android:spinnerMode="dialog"
            style="@style/ComboBox"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpu_name"/>
        <Spinner
            android:id="@+id/SGPUName"
            android:layout_width="match_parent"
            android:spinnerMode="dialog"
            style="@style/ComboBox"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_memory_size"/>
        <Spinner
            android:entries="@array/video_memory_size_entries"
            android:id="@+id/SVideoMemorySize"
            android:layout_width="match_parent"
            android:spinnerMode="dialog"
            style="@style/ComboBox"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strict_shader_math"/>
        <Spinner
            android:id="@+id/SStrictShaderMath"
            android:layout_width="match_parent"
            android:spinnerMode="dialog"
            style="@style/ComboBox"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offscreen_rendering_mode"/>
        <Spinner
            android:id="@+id/SOffscreenRenderingMode"
            android:layout_width="match_parent"
            android:spinnerMode="dialog"
            style="@style/ComboBox"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Renderer"/>
        <Spinner
            android:id="@+id/SRenderer"
            android:layout_width="match_parent"
            android:spinnerMode="dialog"
            style="@style/ComboBox"/>
    </LinearLayout>
</ScrollView>
