<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="172dp">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_width="330dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drive_c"/>
            <TextView
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:id="@+id/TVDriveCSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cache"/>
            <TextView
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:id="@+id/TVCacheSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total"/>
            <TextView
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:id="@+id/TVTotalSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:layout_gravity="center"
                    android:id="@+id/CircularProgressIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:indicatorColor="@color/colorAccent"
                    app:indicatorSize="120dp"
                    app:trackColor="#bdbdbd"
                    app:trackThickness="16dp"/>
                <TextView
                    android:textSize="18dp"
                    android:layout_gravity="center"
                    android:id="@+id/TVUsedSpace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </FrameLayout>
            <TextView
                android:textSize="12dp"
                android:textColor="#bdbdbd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/estimated_used_space"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
