<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/bordered_panel"
            android:padding="8dp"
            android:layout_width="430dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/LLTableHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">
                <TextView
                    android:layout_width="0dp"
                    android:text="@string/process_name"
                    android:layout_weight="1"
                    style="@style/TableHeadBackground"/>
                <TextView
                    android:layout_width="60dp"
                    android:text="@string/pid"
                    style="@style/TableHeadBackground"/>
                <TextView
                    android:layout_width="110dp"
                    android:text="@string/memory"
                    style="@style/TableHeadBackground"/>
                <View
                    android:layout_width="40dp"
                    style="@style/TableHeadBackground"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="140dp">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/LLProcessList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </ScrollView>
                <TextView
                    android:gravity="center"
                    android:id="@+id/TVEmptyText"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/no_items_to_display"/>
            </FrameLayout>
        </LinearLayout>
        <ScrollView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/bordered_panel"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/TVCPUTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:orientation="vertical"
                        android:id="@+id/LLCPUInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/bordered_panel"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">
                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/TVMemoryTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/TVMemoryInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</HorizontalScrollView>
