<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/LLTitleBar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/IVIcon"
                android:visibility="gone"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="8dp"
                app:tint="@color/colorPrimary"/>
            <TextView
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:id="@+id/TVTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View style="@style/HorizontalLine"/>
    </LinearLayout>
    <TextView
        android:textSize="18sp"
        android:id="@+id/TVMessage"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:layout_gravity="center_horizontal"
        android:id="@+id/EditText"
        android:visibility="gone"
        android:layout_width="280dp"
        style="@style/EditText"/>
    <ListView
        android:id="@+id/ListView"
        android:visibility="gone"
        android:layout_width="340dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <FrameLayout
        android:id="@+id/FrameLayout"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/LLBottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View style="@style/HorizontalLine"/>
        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:id="@+id/TVBottomBarText"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/LLBottomBarPanel"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/BTReset"
                    android:visibility="gone"
                    android:text="@string/reset"
                    style="@style/ButtonNeutral"/>
                <Button
                    android:id="@+id/BTCancel"
                    android:text="@string/cancel"
                    android:layout_weight="1"
                    style="@style/ButtonNeutral"/>
                <Button
                    android:id="@+id/BTConfirm"
                    android:text="@string/ok"
                    android:layout_weight="1"
                    style="@style/ButtonNeutral"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
